source/assets/stylesheets/components/_sector.sass
// *************************************
//
//   Sector
//   -> Adjacent bleed divisions
//      CodePen: http://codepen.io/johndjameson/pen/LaiKH
//
// -------------------------------------
//   Template (Haml)
// -------------------------------------
//
// .has-sector
//
// .sector
//
//   .sector-item[a|b invert]
//     / ...
//
//   .sector-item[a|b invert]
//     / ...
//
// *************************************

.sector
  display: flex
  flex-wrap: wrap

// -------------------------------------
//   Context
// -------------------------------------

// ----- Sector ----- //

.has-sector
  overflow: hidden

// -------------------------------------
//   Scaffolding
// -------------------------------------

// ----- Item ----- //

.sector-item
  position: relative

  &::before
    bottom: 0
    content: ''
    left: 0
    position: absolute
    top: 0
    width: 100vw
    z-index: -1

  &:first-child::before
    left: auto
    right: 0

// Hierarchy

.sector-item--a::before
  background: $sector-item--a-background

.sector-item--b::before
  background: $sector-item--b-background

.sector-item--a--invert::before
  background: $sector-item--a--invert-background

.sector-item--b--invert::before
  background: $sector-item--b--invert-background

